assets/css/style.css
/**
    Styling for body: background image, margin
*/

body {
    font-size: 24px;
    margin: 0 auto;
    background-image: url("../images/gravel.png");
    max-height: 100%
}

/**
    Navigation Bar and Top Banner
*/
.navbar {
    border-bottom: 1px solid gray;
}

.main_title_label {
    padding: 10px;
    background: #4aaaa5;
    color: white;
    font-size: 24px;
    font-family: 'Georgia', 'Times', 'Times New Roman', serif;
}

.navbar-brand {
    margin-left:55px;
}

/**
    Styling for Main Content
*/
.main_content {
    background: white;
    margin-top: 30px;
    width:100%;
    padding: 10px;
    height: 75%;
}

.scroll-overflow {
    overflow: scroll;
}

.card_header {
    color: #4aaaa5;
    background-color: white;
    font-family: 'Georgia', 'Times', 'Times New Roman', serif;
    font-size: 24px;
    border: none;
}


/**
    Styling for Portfolio Images in Grid
*/
.image_wrapper {
    width: 100%;
    height: 100%; 
    margin: auto;
    overflow: hidden;
  }


 .project_label {
    position: relative;
    /* margin-left: 2px;
    margin-right: 2px; */
    width:100%;
    background: #4aaaa5;
    color: white;
    font-size: 14px;
    text-align: center;
    padding: 10px;
    font-family: 'Georgia', 'Times', 'Times New Roman', serif;
    top: -145px;
  } 

/**
    Styling for Contact Form
*/
.submit-button {
    color:white;
    background-color:teal;
}

/**
    Styling for Footer
*/
 footer {
    border-top: solid 5px teal;
    margin-top: 45px;
    background:#666666;
    padding: 30px;
    text-align: center;
    font-size: 14px;
} 

